Fixes links, centers profile images on small screen

--- a/static/css/main.css
+++ b/static/css/main.css
@@ -62,6 +62,29 @@ input::-moz-focus-inner {
 	margin-top: 40px;
 }
 
+@media screen and (max-width: 736px) {
+	#profile_pic {
+		display: block;
+		float: none;
+		width: 70%;
+		margin-left: auto;
+		margin-right: auto;
+		text-align: center;
+		align-items: center;
+	}
+
+	#name_header {
+		display: block;
+		float: none;
+		width: 70%;
+		margin-left: 10px;
+		margin-right: 10px;
+		text-align: center;
+		align-items: center;
+	}
+}
+
+
 /* Basic */
 
 	@-ms-viewport {
@@ -507,95 +530,86 @@ body {
 
 /* Image */
 
-	.image {
-		border: 0;
-		display: inline-block;
-		position: relative;
+.image {
+	border: 0;
+	display: inline-block;
+	position: relative;
+}
+
+	.image img {
+		display: block;
 	}
 
-		.image img {
-			display: block;
+	.image.left, .image.right {
+		max-width: 40%;
+	}
+
+		.image.left img, .image.right img {
+			width: 100%;
 		}
 
-		.image.left, .image.right {
-			max-width: 40%;
+	.image.left {
+		float: left;
+		margin: 0 2rem 2rem 0;
+		top: 0.75rem;
+	}
+
+	.image.right {
+		float: right;
+		margin: 0 0 2rem 2rem;
+		top: 0.75rem;
+	}
+
+	.image.fit {
+		display: block;
+		margin: 2.5rem 0;
+		width: 100%;
+	}
+
+		.image.fit:first-child {
+			margin-top: 0;
 		}
 
-			.image.left img, .image.right img {
-				width: 100%;
-			}
-
-		.image.left {
-			float: left;
-			margin: 0 2rem 2rem 0;
-			top: 0.75rem;
+		.image.fit img {
+			width: 100%;
 		}
 
-		.image.right {
-			float: right;
-			margin: 0 0 2rem 2rem;
-			top: 0.75rem;
+	.image.main {
+		display: block;
+		margin: 4rem 0;
+		width: 100%;
+	}
+
+		.image.main:first-child {
+			margin-top: 0;
 		}
+
+		.image.main img {
+			width: 50%;
+		}
+
+	@media screen and (max-width: 736px) {
 
 		.image.fit {
-			display: block;
-			margin: 2.5rem 0;
-			width: 100%;
+			margin: 2rem 0;
 		}
-
-			.image.fit:first-child {
-				margin-top: 0;
-			}
-
-			.image.fit img {
-				width: 100%;
-			}
 
 		.image.main {
-			display: block;
-			margin: 4rem 0;
-			width: 100%;
+			margin: 2rem 0;
 		}
-
-			.image.main:first-child {
-				margin-top: 0;
-			}
-
-			.image.main img {
-				width: 50%;
-			}
-
-		@media screen and (max-width: 736px) {
-
-			.image.fit {
-				margin: 2rem 0;
-			}
-
-			.image.main {
-				margin: 2rem 0;
-			}
-		}
-
-	a.image {
-		overflow: hidden;
 	}
 
-		a.image img {
-			transition: transform 0.2s ease-out;
-		}
-
-		a.image:hover img {
-			transform: scale(1.05);
-		}
-
-@media screen and (max-width: 736px) {
-	#profile_pic {
-		display: block;
-		width: 50%;
-		margin-left:auto;
-		margin-right:auto;
-	}
+a.image {
+	overflow: hidden;
 }
+
+	a.image img {
+		transition: transform 0.2s ease-out;
+	}
+
+	a.image:hover img {
+		transform: scale(1.05);
+	}
 
 /* Actions */
 
